# scgi

./: .gitmodules  CMakeLists.txt  README.md  build_debian.sh  http.cpp  io.cpp  io.h  patterns.cpp  patterns.h  scgi.cpp  scgi.h  service.cpp
src/: http.h  io  io.h  scgi.cpp  scgi.h  service.cpp  service.h
